Deserialize point with unsigned integer types

--- a/src/Pgpointcloud4dotnet.Tests/Pgpointcloud4dotnet.Tests.csproj
+++ b/src/Pgpointcloud4dotnet.Tests/Pgpointcloud4dotnet.Tests.csproj
@@ -12,22 +12,38 @@
     <None Remove="Models\Model_For_32bits_Integer.xml" />
     <None Remove="Models\Model_For_64bits_Integer.xml" />
     <None Remove="Models\Model_For_8bits_Integer.xml" />
+    <None Remove="Models\UnsignedIntegers\Model_For_16bits_UnsignedInteger.xml" />
+    <None Remove="Models\UnsignedIntegers\Model_For_32bits_UnsignedInteger.xml" />
+    <None Remove="Models\UnsignedIntegers\Model_For_64bits_UnsignedInteger.xml" />
+    <None Remove="Models\UnsignedIntegers\Model_For_8bits_UnsignedInteger.xml" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Models\Model_For_64bits_Integer.xml">
+    <Content Include="Models\Integers\Model_For_64bits_Integer.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Models\Model_For_32bits_Integer.xml">
+    <Content Include="Models\Integers\Model_For_32bits_Integer.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Models\Model_For_16bits_Integer.xml">
+    <Content Include="Models\Integers\Model_For_16bits_Integer.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Models\Model_For_8bits_Integer.xml">
+    <Content Include="Models\Integers\Model_For_8bits_Integer.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Models\Model1.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\UnsignedIntegers\Model_For_16bits_UnsignedInteger.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\UnsignedIntegers\Model_For_32bits_UnsignedInteger.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\UnsignedIntegers\Model_For_64bits_UnsignedInteger.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\UnsignedIntegers\Model_For_8bits_UnsignedInteger.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
