--- a/src/Pgpointcloud4dotnet/Pgpointcloud4dotnet.csproj
+++ b/src/Pgpointcloud4dotnet/Pgpointcloud4dotnet.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <RootNamespace>Pgpointcloud4dotnet</RootNamespace>
     <AssemblyName>Pgpointcloud4dotnet</AssemblyName>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/tongbong/pgpointcloud4dotnet</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/tongbong/pgpointcloud4dotnet</RepositoryUrl>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <Version>1.0.0-alpha.1</Version>
   </PropertyGroup>
 
 </Project>
