--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,5 +43,7 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"tongbong_pgpointcloud4dotnet" /o:"tongbong-github" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.coverage.exclusions=”**Test*.cs /d:sonar.cs.opencover.reportsPaths=src\Pgpointcloud4dotnet.Tests\coverage.opencover.xml
+          dotnet restore .\src\Pgpointcloud4dotnet.sln
+          dotnet build --configuration Release --no-restore .\src\Pgpointcloud4dotnet.sln
           dotnet test .\src\Pgpointcloud4dotnet.sln /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
