--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,10 +20,10 @@ jobs:
         run: |
           dotnet restore .\src\Pgpointcloud4dotnet.sln
           dotnet build --configuration Release --no-restore .\src\Pgpointcloud4dotnet.sln
-      - name: Publish
-      uses: brandedoutcast/publish-nuget@v2
-      with:
-        PROJECT_FILE_PATH: .\src\Pgpointcloud4dotnet\Pgpointcloud4dotnet.csproj
-        VERSION_REGEX: '^\s*<PackageVersion>(.*)<\/PackageVersion>\s*$'
-        TAG_FORMAT: '*'
-        NUGET_KEY: ${{secrets.NUGET_API_KEY}}
+      - name: Publish to nuget
+        uses: brandedoutcast/publish-nuget@v2
+        with:
+          PROJECT_FILE_PATH: .\src\Pgpointcloud4dotnet\Pgpointcloud4dotnet.csproj
+          VERSION_REGEX: '^\s*<PackageVersion>(.*)<\/PackageVersion>\s*$'
+          TAG_FORMAT: '*'
+          NUGET_KEY: ${{secrets.NUGET_API_KEY}}
