--- a/src/Pgpointcloud4dotnet/Pgpointcloud4dotnet.csproj
+++ b/src/Pgpointcloud4dotnet/Pgpointcloud4dotnet.csproj
@@ -11,4 +11,8 @@
     <Version>1.0.0-alpha.1</Version>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DotNetZip" Version="1.15.0" />
+  </ItemGroup>
+
 </Project>
