--- a/src/Pgpointcloud4dotnet.Tests/Pgpointcloud4dotnet.Tests.csproj
+++ b/src/Pgpointcloud4dotnet.Tests/Pgpointcloud4dotnet.Tests.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Models\Patches\Model_Dimensional_Deflate.xml" />
+    <None Remove="Models\Patches\Model_Dimensional_Deflate_32Bits_FloatingPoint.xml" />
+    <None Remove="Models\Patches\Model_Dimensional_Deflate_64bits_FloatingPoint.xml" />
     <None Remove="Models\Patches\Model_NoCompression.xml" />
     <None Remove="Models\Points\FloatingPoints\Model_For_32bits_FloatingPoint.xml" />
     <None Remove="Models\Points\FloatingPoints\Model_For_64bits_FloatingPoint.xml" />
@@ -24,7 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Models\Patches\Model_Dimensional_Deflate.xml">
+    <Content Include="Models\Patches\Model_Dimensional_Deflate_64bits_FloatingPoint.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Patches\Model_Dimensional_Deflate_32bits_FloatingPoint.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Models\Patches\Model_NoCompression.xml">
